# Project-BankingSystem

./: BankingSystem.db  CMakeLists.txt  Client.cpp  Client.h  Cont.cpp  Cont.h  FunctionsSQL.cpp  FunctionsSQL.h  README.md  ServiciiBancare.h  SistemBancar.db  StringsSQL.cpp  StringsSQL.h  StringsSQL.hpp  Tabele.sql  Tables.sql  Transactions.cpp  Tranzactii.cpp  Tranzactii.h  Utilities.cpp  Utilities.h  main.cpp
include/: Account.hpp  CMakeLists.txt  Client.hpp  FunctionsSQL.hpp  Transactions.hpp  Utilities.hpp
src/: CMakeLists.txt
src/C++/: Account.cpp  CMakeLists.txt  FunctionsSQL.cpp  Utilities.cpp  main.cpp
src/SQL+DB/: CMakeLists.txt
